overlays/dev/nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "9694-211-244-225-211.ngrok-free.app"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-spring-app
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-react-app
            port:
              number: 80
